--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "18.0.9",
     "animate.css": "^4.1.1",
     "eslint": "8.30.0",
@@ -21,6 +22,7 @@
     "next": "13.0.7",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
